# Polynom

./: BUILD_INSTRUCTIONS.txt  CMakeLists.txt  README.md  build.bat  build_and_run.bat
gtest/: CMakeLists.txt
gui/: CMakeLists.txt  calculatorwidget.cpp  calculatorwidget.h  calculatorwidget.ui  containerpolynom.cpp  containerpolynom.h  database.cpp  database.h  flowlayout.cpp  flowlayout.h  listlayout.cpp  listlayout.h  listpolynom.cpp  listpolynom.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  polynomContainerProvider.h  resources.qrc  selectwidget.cpp  selectwidget.h  selectwidget.ui  struct.h  tabwidget.cpp  tabwidget.h  widgetpolynom.cpp  widgetpolynom.h
include/: AVLtree.h  UnorderedTable.h  chained_hashtable.h  imap_container.h  ordered_table.h  ordered_table_container.h  polynom.h  polynom_container.h  red_black_tree.h  unordered_table.h  unordered_table_container.h
include/translator/: calculator.h  lexer.h  parser.h  polish.h  queue.h  stack.h  structs.h  translator.h
run/: CMakeLists.txt
src/: CMakeLists.txt  monom.cpp  polynom.cpp
src/translator/: CMakeLists.txt  calculator.cpp  lexer.cpp  parser.cpp  polish.cpp  translator.cpp
test/: test_calculator.cpp  test_chained_hashtable.cpp  test_lexer.cpp  test_main.cpp  test_monom.cpp  test_ordered_table.cpp  test_parser.cpp  test_polish.cpp  test_polynom.cpp  test_polynom_parser.cpp  test_queue.cpp  test_red_black_tree.cpp  test_stack.cpp
